# NetworkSimulator

./: CMakeLists.txt  NetworkSimulator.pro  README.md  README.txt  graphwidget.h  main.cpp  netsim.cpp  netsim.h  netsim.ui
other/: MSposter.pptx  NetworkSimulator.docx  ~$MSposter.pptx
src/: algorithmpanel.cpp  algorithmpanel.h  backend.h  datahandler.cpp  datahandler.h  graphpanel.cpp  graphpanel.h  graphwidget.h  main.cpp  netsim.ui  netsim_classes.h  netsim_window.cpp
